--- a/index.html
+++ b/index.html
@@ -508,7 +508,10 @@
           ชื่อเล่น: บอล<br>
           เกิดวันที่ 21 เมษายน 2549 (อายุ 19 ปี)<br>
           กำลังศึกษาที่วิทยาลัยเทคนิคดอนเมือง<br>
-          ระดับประกาศนียบัตรวิชาชีพขั้นสูง (ปวส.) ปีที่ 2
+          ระดับประกาศนียบัตรวิชาชีพขั้นสูง (ปวส.) ปีที่ 2<br>
+          สาขาวิชา : เทคโนโลยีคอมพิวเตอร์
+          GPX : 3.90(3 เทอม)<br>
+          
 
         </p>
       </div>
